--- a/index.html
+++ b/index.html
@@ -1,9 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar" dir="rtl" class="scroll-smooth">
   <head>
-    <title>Halaqti</title>
-  </head>
-  <body>
-    <h1>الموقع قيد التطوير</h1>
-  </body>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>نظام حلقتي | إدارة حلقات التحفيظ بذكاء</title>
+    <meta name="description" content="نظام حلقتي — تطبيق مجاني لإدارة حلقات التحفيظ: جلسات، تقارير، بطاقات طلاب، إشعارات ولوحة شرف. سهّل عمل المعلم واحفظ وقتك." />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+    <script>
+      tailwind.config = {
+        darkMode: 'media', // Respect system dark mode preference
+        theme: {
+          extend: {
+            fontFamily: {
+              cairo: ['Cairo', 'sans-serif'],
+            },
+            animation: {
+              'float': 'float 6s ease-in-out infinite',
+              'bounce-slow': 'bounce 3s infinite',
+              'fade-in-down': 'fadeInDown 0.3s ease-out',
+            },
+            keyframes: {
+              float: {
+                '0%, 100%': { transform: 'translateY(0)' },
+                '50%': { transform: 'translateY(-20px)' },
+              },
+              fadeInDown: {
+                '0%': { opacity: '0', transform: 'translateY(-10px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
+              }
+            },
+            colors: {
+              brand: {
+                green: '#0BA57B',
+                dark: '#065F46',
+                light: '#D1FAE5',
+                cream: '#F7F3EC',
+                gold: '#D4AF37',
+                text: '#1F2937',
+                // Dark mode specific colors
+                'dark-bg': '#111827',
+                'dark-card': '#1F2937',
+                'dark-text': '#F9FAFB',
+                'dark-muted': '#9CA3AF'
+              }
+            }
+          }
+        }
+      }
+    </script>
+    <style>
+      body {
+        font-family: 'Cairo', sans-serif;
+      }
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      ::-webkit-scrollbar {
+        display: none;
+      }
+      /* Hide scrollbar for IE, Edge and Firefox */
+      html {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
+    </style>
+  <script type="importmap">
+{
+  "imports": {
+    "react/": "https://aistudiocdn.com/react@^19.2.1/",
+    "react": "https://aistudiocdn.com/react@^19.2.1",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.556.0"
+  }
+}
+</script>
+<link rel="stylesheet" href="/index.css">
+</head>
+  <body class="bg-brand-cream text-brand-text dark:bg-brand-dark-bg dark:text-brand-dark-text antialiased selection:bg-brand-green selection:text-white transition-colors duration-300">
+    <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
 </html>
